Closed Bug 1635899 Opened 4 years ago Closed 4 years ago

We should cancel TRR::mTimeout in OnStopRequest.

Categories

(Core :: Networking: DNS, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: valentin, Assigned: valentin)

Details

(Whiteboard: [necko-triaged][trr])

Attachments

(1 file)

The timer will fire needlessly and not do anything.
It's best to just cancel it when it's not needed anymore.

Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/5e5e61b7696e
Cancel TRR::mTimeout timer in OnStopRequest r=dragana,necko-reviewers
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: