Bug 1635899 - Cancel TRR::mTimeout timer in OnStopRequest r=dragana,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D74133